fix: ajout du css word-wrap pour les labels des radio boutons (nom des couches long)

--- a/assets/sass/components/upload-style-files.scss
+++ b/assets/sass/components/upload-style-files.scss
@@ -4,4 +4,7 @@
     border-color: --border-default-blue-france;
     padding-left: 0.5rem;
     min-width: 100%;
+    label {
+        word-wrap: anywhere;
+    }
 }
